Foram adicionados os estilos formpg.css, homepg.css e alterado layout.css, alterados cardápio.html, formulário.html, promoções.html, sobre.html e index.html

--- a/Prj_Pizza_Proz/_estilos/layout.css
+++ b/Prj_Pizza_Proz/_estilos/layout.css
@@ -72,7 +72,7 @@ nav ul li {
 }
 
 nav ul li a {
-    color: #D90404;
+    color: #ffffff;
     text-decoration: none;
     padding: 10px 30px;
     border-radius: 100px;
