--- a/Prj_Pizza_Proz/_estilos/formpg.css
+++ b/Prj_Pizza_Proz/_estilos/formpg.css
@@ -2,10 +2,11 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 header {
-  
+
     position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)), url(../_imagens/pizza_amor.jpeg);
     background-position: center center;
@@ -13,15 +14,15 @@ header {
     width: 100%;
     height: 10vh;
     border-top: 5px solid #078C31;
-    
+
 }
 
 nav {
     width: 100%;
     height: 200px;
     margin: 10px auto;
+    font-weight: bold;
 }
-
 
 nav ul {
     display: flex;
@@ -40,9 +41,8 @@ nav ul li a {
     text-decoration: none;
     padding: 10px 30px;
     border-radius: 100px;
-    font-size: 80%;
+    font-size: 100%;
 }
-
 
 nav ul li a:hover {
     background-color: #F2B705;
@@ -52,65 +52,61 @@ nav ul li a:hover {
 /*Main*/
 
 main {
-    
-  background-image: linear-gradient(rgba(255,255,255,1), rgba(255,255,255,0.8), rgba(255,255,255,1)), url("/Projeto_Pizza/_imagens/background-secao-promocao.png");
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 1rem;
-  padding: 3rem;
-  
+    background-image: linear-gradient(rgba(255, 255, 255, 1), rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 1)), url("/Projeto_Pizza/_imagens/background-secao-promocao.png");
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 1rem;
+    padding: 3rem;
+
 }
 
-
 #formulario {
-  
- background-color: #D90404;
- display: flex; 
- flex-direction: column;
- align-items: center;
- gap: 1rem;
- padding: 50px;
- border-radius: 20px;
+
+    background-color: #D90404;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    padding: 50px;
+    border-radius: 20px;
 }
 
 .campo {
-  
-  display: flex;
-  flex-direction: column;
-  gap: 8px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
 }
 
 label {
-  
-  font-family: 'Pacifico', cursive;
-  color: white;
-  padding-left: 10px;
+
+    font-family: 'Pacifico', cursive;
+    color: white;
+    padding-left: 10px;
 }
 
-
 input, select {
-  
-  height: 40px;
-  width: 400px;
-  border-radius: 10px;
-  border: 0px;
-  padding: 10px;
-  outline: unset;
-  
+
+    height: 40px;
+    width: 400px;
+    border-radius: 10px;
+    border: 0;
+    padding: 10px;
+    outline: unset;
 }
 
 input:focus, select :focus textarea {
-  
-  background-color: wheat;
+
+    background-color: wheat;
 }
 
 main a {
-   
+
     font-family: 'Pacifico', cursive;
     color: white;
-    background-color:  #078C31;
+    background-color: #078C31;
     display: flex;
     align-items: center;
     text-decoration: none;
@@ -120,7 +116,7 @@ main a {
 }
 
 footer {
-  
+
     display: flex;
     flex-wrap: wrap;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url(../_imagens/pizza_amor.jpeg);
@@ -128,7 +124,7 @@ footer {
     width: 100%;
     height: 10vh;
     border-bottom: 5px solid #078C31;
-    
+
 }
 
 h1 {
