--- a/Prj_Pizza_Proz/_estilos/homepg.css
+++ b/Prj_Pizza_Proz/_estilos/homepg.css
@@ -2,10 +2,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-size: 16px;
 }
 
 header {
-  
     position: relative;
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0)), url(../_imagens/pizza_amor.jpeg);
     background-position: center center;
@@ -13,13 +13,13 @@ header {
     width: 100%;
     height: 10vh;
     border-top: 5px solid #078C31;
-    
 }
 
 nav {
     width: 100%;
     height: 200px;
     margin: 10px auto;
+    font-weight: bold;
 }
 
 
@@ -40,9 +40,8 @@ nav ul li a {
     text-decoration: none;
     padding: 10px 30px;
     border-radius: 100px;
-    font-size: 80%;
+    font-size: 100%;
 }
-
 
 nav ul li a:hover {
     background-color: #F2B705;
@@ -52,143 +51,123 @@ nav ul li a:hover {
 /*main*/
 
 main {
-  
-  background-color: white;
-  
-  
+    background-color: white;
 }
 
-      /*Primeira sessão do site*/
+/*Primeira sessão do site*/
 
 #titulo-one {
-  
-  margin-top: 6rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 40px;
+
+    margin-top: 6rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height: 40px;
 }
 
 #section-one {
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 500px;
 }
 
 #conteudo-one {
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
-  height: 200px;
-  width: 1000px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+    height: 200px;
+    width: 1000px;
 }
 
 #buttons-one {
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 5px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 5px;
 }
 
 #section-one a {
-  
-  font-family: 'Pacifico', cursive;
-  color: white;
-  background-color: #F03733;
-  text-decoration: none;
-  border-radius: 20px;
-  padding: 5px 5px;
-  height: 40px;
-  width: 150px;
-  text-align: center;
-  font-size: 100%
-  
+    font-family: 'Pacifico', cursive;
+    color: white;
+    background-color: #F03733;
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 5px 5px;
+    height: 40px;
+    width: 150px;
+    text-align: center;
+    font-size: 100%
 }
 
-     /* Segunda sessão do Site*/
+/* Segunda sessão do Site*/
 
 #section-two {
-  
-  color: white;
-  background-color: #404040;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 2rem;
-  height: 150px;
+    color: white;
+    background-color: #404040;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    height: 150px;
 }
 
 #section-two strong {
-  
-  color: #F2B705;
-  
+    color: #F2B705;
 }
 
 #section-two p {
-  
-  color: white;
-  
+    color: white;
 }
 
 #section-two a {
-  
-  font-family: 'Pacifico', cursive;
-  color: #404040;
-  background-color: white;
-  text-decoration: none;
-  border-radius: 20px;
-  padding: 5px 5px;
-  height: 40px;
-  width: 150px;
-  text-align: center;
-  font-size: 100%
-  
+    font-family: 'Pacifico', cursive;
+    color: #404040;
+    background-color: white;
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 5px 5px;
+    height: 40px;
+    width: 150px;
+    text-align: center;
+    font-size: 100%
 }
-      /* Terceira sessão do Site */
-      
+
+/* Terceira sessão do Site */
+
 #section-three {
-  
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 400px;
-  
-}      
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 400px;
+}
 
 #conteudo-cardapio {
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 2rem;
-  width: 2000px;
-}    
-
-#section-three a {
-  
-  font-family: 'Pacifico', cursive;
-  color: white;
-  background-color: #F03733;
-  text-decoration: none;
-  border-radius: 20px;
-  padding: 5px 5px;
-  height: 40px;
-  width: 150px;
-  text-align: center;
-  font-size: 100%
-  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 2rem;
+    width: 2000px;
 }
 
-      /*footer*/
+#section-three a {
+    font-family: 'Pacifico', cursive;
+    color: white;
+    background-color: #F03733;
+    text-decoration: none;
+    border-radius: 20px;
+    padding: 5px 5px;
+    height: 40px;
+    width: 150px;
+    text-align: center;
+    font-size: 100%
+}
+
+/*footer*/
 
 footer {
-  
     display: flex;
     flex-wrap: wrap;
     background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.7)), url(../_imagens/pizza_amor.jpeg);
@@ -196,11 +175,9 @@ footer {
     width: 100%;
     height: 10vh;
     border-bottom: 5px solid #078C31;
-    
 }
 
 .rodape {
-  
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -216,10 +193,8 @@ footer {
 /*fontes*/
 
 .plogo {
-  
-  font-family: 'Pacifico', cursive;
+    font-family: 'Pacifico', cursive;
     color: #F2B705;
-  
 }
 
 h1 {
@@ -232,13 +207,11 @@ h1 {
 }
 
 h5 {
-  
-  font-family: 'Fredericka the Great', serif;
+    font-family: 'Fredericka the Great', serif;
     text-transform: uppercase;
     color: #D90404;
     font-size: 200%;
     font-weight: 200;
-  
 }
 
 h4, h2 {
@@ -251,14 +224,11 @@ h4, h2 {
 }
 
 p {
-  
-  font-family: 'Mukta', sans-serif;
-  font-size: 120%;
-  color: #404040;
+    font-family: 'Mukta', sans-serif;
+    font-size: 120%;
+    color: #404040;
 }
 
 strong {
-  
-  color: #D90404;
-  
+    color: #D90404;
 }
